Add error handling

--- a/labs/4/lang/en/en.json
+++ b/labs/4/lang/en/en.json
@@ -2,6 +2,7 @@
     "errorMissingWord": "Missing word parameter",
     "internalServerError": "500 Internal Server Error",
     "wordAlreadyExists": "'%1' already exists in the dictionary.",
+    "wordNotFound": "Request #%1: word '%2' not found!",
     "wordStoredSuccessfully": "'%1' was successfully stored in the dictionary.",
     "invalidJson": "Invalid JSON",
     "invalidInput": "Error: Invalid Input"
